# dynamic-multi-agent-workflow-platform

./: .env.example  .gitignore  README.md  knowledge_config.yaml  pyproject.toml  requirements.txt  workflow.db  workflow_e2e.db  workflow_e2e2.db  workflow_final.db  workflow_test.db  workflow_verify.db
api/: dependencies.py  main.py
api/routers/: extensions.py  hitl.py  knowledge.py  planner.py  runs.py  workflows.py
api/schemas/: __init__.py  extensions.py  knowledge.py  planner.py  run.py  workflow.py
docs/: v2-design.md  v3-design.md
platform/: __init__.py
platform/agent/: __init__.py  runtime.py
platform/aggregator/: __init__.py  result_aggregator.py
platform/config/: __init__.py  loader.py  validator.py
platform/core/: __init__.py  exceptions.py
platform/extensions/: catalog.py  installer.py  manager.py  models.py
platform/hitl/: __init__.py  approval_manager.py
platform/knowledge/: __init__.py  chunker.py  config.py  embedder.py  indexer.py  loader.py  retriever.py  service.py  vector_store.py
platform/llm/: __init__.py  claude_provider.py  mock_provider.py  openai_provider.py
platform/memory/: __init__.py  in_memory_store.py
platform/observability/: __init__.py  composite_observer.py  console_observer.py  persisting_observer.py
platform/orchestrator/: __init__.py  orchestrator.py  run_manager.py
platform/patterns/: __init__.py  base.py  parallel_specialist.py  planner_executor_observer.py  router.py
platform/persistence/: __init__.py  (+2 more)
scripts/: index_knowledge.py
ui/: index.html  package-lock.json  package.json  vite.config.ts
(+165 files in other folders)
